# Notes

./: .gitignore  README.md  coq.md  coq.v  emacs.txt  graph_theory  id.v  lamda.v  test.ec
and/: Cargo.toml
array_debug/: Cargo.toml
array_memory/: Cargo.toml
as_try/: Cargo.toml
asink/: Cargo.toml
back_slash/: Cargo.toml
bts/: Cargo.toml
c_array_panic/: panic.c
cargo_test/: Cargo.toml
clip/: Cargo.toml
cmp_time/: Cargo.toml
coq_with_lec/: week01.v  week02.v
cpp_d/: pow.cpp
cpp_review/: ArrayStream.cpp  ArrayStream.h  New3.cpp  Stream.cpp  Stream.h  class1.cpp  enum.cpp  struct.cpp
curry/: Cargo.toml
dast/: Cargo.toml
en/: Cargo.toml
endless/: Cargo.toml
equal/: Cargo.toml
error/: Cargo.toml
file_input/: Cargo.toml
gl_tutorial/: Cargo.toml
gl_tutorial/src/: main.rs
gnuplot_practice/: Cargo.toml
helloworld/: bazel-bin  bazel-helloworld  bazel-out  bazel-testlogs
indent/: Cargo.toml
infinite_list/: Cargo.toml
inner_method/: Cargo.toml
io/: .gitignore  Cargo.toml
keyboard/: Cargo.toml
lab/: lab.cpp
lamda/: Cargo.toml
lazy_k/: Cargo.toml
llvm_study/: helloworld.c  helloworld.ll  struct.c  struct.ll
lua_test/: file.lua  sample.c  sample.lua  test.c  test.lua
max/: Cargo.toml
minimum_array/: Cargo.toml
name/: Cargo.toml
napier/: Cargo.toml
net/: Cargo.toml
numeric_error/: Cargo.toml
parallel/: Cargo.toml
point/: Cargo.toml
prolog/: sample.pl
randam/: Cargo.toml
reduction_if/: Cargo.toml
ref_cell/: Cargo.toml
relax/: Cargo.toml
roulette/: Cargo.toml
roulette2/: Cargo.toml
(+83 files in other folders)
