[package]
name = "gl_tutorial"
version = "0.1.0"
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.31.0", features = ["bundled", "static-link"] }
gl = "0.14.0"
